utilisation des id keycloak pour la gestion des événements